--- a/Bowser/src/Interface/BrowserInterface.form
+++ b/Bowser/src/Interface/BrowserInterface.form
@@ -82,7 +82,9 @@
                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
                   <Component id="btnFavoritos" min="-2" pref="86" max="-2" attributes="0"/>
                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                  <Component id="closeTab" min="-2" max="-2" attributes="0"/>
+                  <Component id="btnCloseTab" min="-2" max="-2" attributes="0"/>
+                  <EmptySpace type="separate" max="-2" attributes="0"/>
+                  <Component id="btnAddFav" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="32767" attributes="0"/>
               </Group>
           </Group>
@@ -96,7 +98,8 @@
                           <Component id="btnConta" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="btnHistorico" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="btnFavoritos" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="closeTab" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="btnCloseTab" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="btnAddFav" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <Component id="btnNewTab" min="-2" max="-2" attributes="0"/>
                   </Group>
@@ -164,18 +167,27 @@
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnFavoritosActionPerformed"/>
           </Events>
         </Component>
-        <Component class="javax.swing.JButton" name="closeTab">
+        <Component class="javax.swing.JButton" name="btnCloseTab">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Roboto" size="12" style="0"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Close Tab"/>
+            <Property name="text" type="java.lang.String" value="Fechar Tab"/>
+            <Property name="actionCommand" type="java.lang.String" value="CloseTab"/>
             <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
               <Color id="Cursor em Forma de M&#xe3;o"/>
             </Property>
           </Properties>
           <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="closeTab"/>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnCloseTab"/>
+          </Events>
+        </Component>
+        <Component class="javax.swing.JButton" name="btnAddFav">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="Add aos Favoritos"/>
+          </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnAddFavActionPerformed"/>
           </Events>
         </Component>
       </SubComponents>
